zetasql/parser/testdata/time_travel.test
SELECT * FROM t FOR SYSTEM_TIME AS OF TIMESTAMP '2011-01-01 12:20:20'
--
QueryStatement [0-69] [SELECT * FROM...12:20:20']
  Query [0-69] [SELECT * FROM...12:20:20']
    Select [0-69] [SELECT * FROM...12:20:20']
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-69] [FROM t FOR...12:20:20']
        TablePathExpression [14-69] [t FOR SYSTEM_TIME...12:20:20']
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          ForSystemTime [16-69] [FOR SYSTEM_TIME...12:20:20']
            DateOrTimeLiteral(TYPE_TIMESTAMP) [38-69] [TIMESTAMP...12:20:20']
              StringLiteral('2011-01-01 12:20:20') [48-69] ['2011-01-01 12:20:20']
--
SELECT
  *
FROM
  t FOR SYSTEM_TIME AS OF TIMESTAMP '2011-01-01 12:20:20'

==

SELECT * FROM t FOR SYSTEM TIME AS OF TIMESTAMP '2011-01-01 12:20:20'
--
QueryStatement [0-69] [SELECT * FROM...12:20:20']
  Query [0-69] [SELECT * FROM...12:20:20']
    Select [0-69] [SELECT * FROM...12:20:20']
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-69] [FROM t FOR...12:20:20']
        TablePathExpression [14-69] [t FOR SYSTEM...12:20:20']
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          ForSystemTime [16-69] [FOR SYSTEM...12:20:20']
            DateOrTimeLiteral(TYPE_TIMESTAMP) [38-69] [TIMESTAMP...12:20:20']
              StringLiteral('2011-01-01 12:20:20') [48-69] ['2011-01-01 12:20:20']
--
SELECT
  *
FROM
  t FOR SYSTEM_TIME AS OF TIMESTAMP '2011-01-01 12:20:20'

==

SELECT * FROM t FOR SYSTEM_TIME AS OF TIMESTAMP_ADD(@yesterday, INTERVAL 2 HOUR)
--
QueryStatement [0-80] [SELECT * FROM...TERVAL 2 HOUR)]
  Query [0-80] [SELECT * FROM...TERVAL 2 HOUR)]
    Select [0-80] [SELECT * FROM...TERVAL 2 HOUR)]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-80] [FROM t FOR...INTERVAL 2 HOUR)]
        TablePathExpression [14-80] [t FOR SYSTEM_TIME...AL 2 HOUR)]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          ForSystemTime [16-80] [FOR SYSTEM_TIME...RVAL 2 HOUR)]
            FunctionCall [38-80] [TIMESTAMP_ADD...TERVAL 2 HOUR)]
              PathExpression [38-51] [TIMESTAMP_ADD]
                Identifier(TIMESTAMP_ADD) [38-51] [TIMESTAMP_ADD]
              ParameterExpr [52-62] [@yesterday]
                Identifier(yesterday) [53-62] [yesterday]
              IntervalExpr [64-79] [INTERVAL 2 HOUR]
                IntLiteral(2) [73-74] [2]
                Identifier(HOUR) [75-79] [HOUR]
--
SELECT
  *
FROM
  t FOR SYSTEM_TIME AS OF TIMESTAMP_ADD(@yesterday, INTERVAL 2 HOUR)
==

SELECT * FROM t FOR SYSTEM_TIME AS OF TIMESTAMP_ADD(@@sysvar1, INTERVAL @@sysvar2 HOUR)
--
QueryStatement [0-87] [SELECT * FROM...sysvar2 HOUR)]
  Query [0-87] [SELECT * FROM...sysvar2 HOUR)]
    Select [0-87] [SELECT * FROM...sysvar2 HOUR)]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-87] [FROM t FOR...sysvar2 HOUR)]
        TablePathExpression [14-87] [t FOR SYSTEM_TIME...var2 HOUR)]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          ForSystemTime [16-87] [FOR SYSTEM_TIME...ysvar2 HOUR)]
            FunctionCall [38-87] [TIMESTAMP_ADD...sysvar2 HOUR)]
              PathExpression [38-51] [TIMESTAMP_ADD]
                Identifier(TIMESTAMP_ADD) [38-51] [TIMESTAMP_ADD]
              SystemVariableExpr [52-61] [@@sysvar1]
                PathExpression [54-61] [sysvar1]
                  Identifier(sysvar1) [54-61] [sysvar1]
              IntervalExpr [63-86] [INTERVAL @@sysvar2 HOUR]
                SystemVariableExpr [72-81] [@@sysvar2]
                  PathExpression [74-81] [sysvar2]
                    Identifier(sysvar2) [74-81] [sysvar2]
                Identifier(HOUR) [82-86] [HOUR]
--
SELECT
  *
FROM
  t FOR SYSTEM_TIME AS OF TIMESTAMP_ADD(@@sysvar1, INTERVAL @@sysvar2 HOUR)
==

SELECT * FROM a.b.c.d.e FOR SYSTEM_TIME AS OF ts
--

QueryStatement [0-48] [SELECT * FROM..._TIME AS OF ts]
  Query [0-48] [SELECT * FROM..._TIME AS OF ts]
    Select [0-48] [SELECT * FROM..._TIME AS OF ts]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-48] [FROM a.b.c...TEM_TIME AS OF ts]
        TablePathExpression [14-48] [a.b.c.d.e...STEM_TIME AS OF ts]
          PathExpression [14-23] [a.b.c.d.e]
            Identifier(a) [14-15] [a]
            Identifier(b) [16-17] [b]
            Identifier(c) [18-19] [c]
            Identifier(d) [20-21] [d]
            Identifier(e) [22-23] [e]
          ForSystemTime [24-48] [FOR SYSTEM_TIME AS OF ts]
            PathExpression [46-48] [ts]
              Identifier(ts) [46-48] [ts]
--
SELECT
  *
FROM
  a.b.c.d.e FOR SYSTEM_TIME AS OF ts
==

SELECT * FROM a.b.c.d.e FOR SYSTEM_TIME AS OF CURRENT_TIMESTAMP WITH OFFSET
--
ERROR: Syntax error: Expected end of input but got keyword WITH [at 1:65]
SELECT * FROM a.b.c.d.e FOR SYSTEM_TIME AS OF CURRENT_TIMESTAMP WITH OFFSET
                                                                ^
==

SELECT * FROM a.b.c.d.e FOR SYSTEM_TIME AS OF CURRENT_TIMESTAMP TABLESAMPLE RESERVOIR(100 ROWS) REPEATABLE (10)
--
QueryStatement [0-111] [SELECT * FROM...EPEATABLE (10)]
  Query [0-111] [SELECT * FROM...EPEATABLE (10)]
    Select [0-111] [SELECT * FROM...EPEATABLE (10)]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-111] [FROM a.b.c...REPEATABLE (10)]
        TablePathExpression [14-111] [a.b.c.d.e...REPEATABLE (10)]
          PathExpression [14-23] [a.b.c.d.e]
            Identifier(a) [14-15] [a]
            Identifier(b) [16-17] [b]
            Identifier(c) [18-19] [c]
            Identifier(d) [20-21] [d]
            Identifier(e) [22-23] [e]
          ForSystemTime [24-63] [FOR SYSTEM_TIME...NT_TIMESTAMP]
            FunctionCall [46-63] [CURRENT_TIMESTAMP]
              PathExpression [46-63] [CURRENT_TIMESTAMP]
                Identifier(`CURRENT_TIMESTAMP`) [46-63] [CURRENT_TIMESTAMP]
          SampleClause [64-111] [TABLESAMPLE...REPEATABLE (10)]
            Identifier(RESERVOIR) [76-85] [RESERVOIR]
            SampleSize [86-94] [100 ROWS]
              IntLiteral(100) [86-89] [100]
            SampleSuffix [96-111] [REPEATABLE (10)]
              RepeatableClause [96-111] [REPEATABLE (10)]
                IntLiteral(10) [108-110] [10]
--
SELECT
  *
FROM
  a.b.c.d.e FOR SYSTEM_TIME AS OF `CURRENT_TIMESTAMP`() TABLESAMPLE RESERVOIR(100 ROWS) REPEATABLE (10)
==

SELECT * FROM a.b.c @{key=value} AS y FOR SYSTEM_TIME AS OF ts
--


QueryStatement [0-62] [SELECT * FROM..._TIME AS OF ts]
  Query [0-62] [SELECT * FROM..._TIME AS OF ts]
    Select [0-62] [SELECT * FROM..._TIME AS OF ts]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-62] [FROM a.b.c...TEM_TIME AS OF ts]
        TablePathExpression [14-62] [a.b.c @{key...EM_TIME AS OF ts]
          PathExpression [14-19] [a.b.c]
            Identifier(a) [14-15] [a]
            Identifier(b) [16-17] [b]
            Identifier(c) [18-19] [c]
          Hint [20-32] [@{key=value}]
            HintEntry [22-31] [key=value]
              Identifier(key) [22-25] [key]
              PathExpression [26-31] [value]
                Identifier(value) [26-31] [value]
          Alias [33-37] [AS y]
            Identifier(y) [36-37] [y]
          ForSystemTime [38-62] [FOR SYSTEM_TIME AS OF ts]
            PathExpression [60-62] [ts]
              Identifier(ts) [60-62] [ts]
--
SELECT
  *
FROM
  a.b.c @{ key = value } AS y FOR SYSTEM_TIME AS OF ts
==

SELECT * FROM a FOR SYSTEM_TIME AS OF t1 LEFT OUTER JOIN b FOR SYSTEM_TIME AS OF t2
--

QueryStatement [0-83] [SELECT * FROM..._TIME AS OF t2]
  Query [0-83] [SELECT * FROM..._TIME AS OF t2]
    Select [0-83] [SELECT * FROM..._TIME AS OF t2]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-83] [FROM a FOR...TEM_TIME AS OF t2]
        Join(LEFT) [14-83] [a FOR SYSTEM_TIME...E AS OF t2]
          TablePathExpression [14-40] [a FOR SYSTEM_TIME AS OF t1]
            PathExpression [14-15] [a]
              Identifier(a) [14-15] [a]
            ForSystemTime [16-40] [FOR SYSTEM_TIME AS OF t1]
              PathExpression [38-40] [t1]
                Identifier(t1) [38-40] [t1]
          Location [41-56] [LEFT OUTER JOIN]
          TablePathExpression [57-83] [b FOR SYSTEM_TIME AS OF t2]
            PathExpression [57-58] [b]
              Identifier(b) [57-58] [b]
            ForSystemTime [59-83] [FOR SYSTEM_TIME AS OF t2]
              PathExpression [81-83] [t2]
                Identifier(t2) [81-83] [t2]
--
SELECT
  *
FROM
  a FOR SYSTEM_TIME AS OF t1
  LEFT JOIN
  b FOR SYSTEM_TIME AS OF t2
==

SELECT * FROM c.t, t.r1 r FOR SYSTEM_TIME AS OF ts, r.r2

--
QueryStatement [0-56] [SELECT * FROM...OF ts, r.r2]
  Query [0-56] [SELECT * FROM...OF ts, r.r2]
    Select [0-56] [SELECT * FROM...OF ts, r.r2]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-56] [FROM c.t,...OF ts, r.r2]
        Join(COMMA) [14-56] [c.t, t.r1...OF ts, r.r2]
          Join(COMMA) [14-50] [c.t, t.r1...STEM_TIME AS OF ts]
            TablePathExpression [14-17] [c.t]
              PathExpression [14-17] [c.t]
                Identifier(c) [14-15] [c]
                Identifier(t) [16-17] [t]
            Location [17-18] [,]
            TablePathExpression [19-50] [t.r1 r FOR...TEM_TIME AS OF ts]
              PathExpression [19-23] [t.r1]
                Identifier(t) [19-20] [t]
                Identifier(r1) [21-23] [r1]
              Alias [24-25] [r]
                Identifier(r) [24-25] [r]
              ForSystemTime [26-50] [FOR SYSTEM_TIME AS OF ts]
                PathExpression [48-50] [ts]
                  Identifier(ts) [48-50] [ts]
          Location [50-51] [,]
          TablePathExpression [52-56] [r.r2]
            PathExpression [52-56] [r.r2]
              Identifier(r) [52-53] [r]
              Identifier(r2) [54-56] [r2]
--
SELECT
  *
FROM
  c.t,
  t.r1 AS r FOR SYSTEM_TIME AS OF ts,
  r.r2
==

# Error cases
# -----------

SELECT * FROM a FOR SYSTEM TIME t
--

ERROR: Syntax error: Expected keyword AS but got identifier "t" [at 1:33]
SELECT * FROM a FOR SYSTEM TIME t
                                ^
==

SELECT * FROM a FOR SYSTEM_TIME AS OF t @{key=value}
--

ERROR: Syntax error: Expected end of input but got "@" [at 1:41]
SELECT * FROM a FOR SYSTEM_TIME AS OF t @{key=value}
                                        ^
==

SELECT * FROM tvf() FOR SYSTEM_TIME AS OF t1
--

ERROR: Syntax error: Expected end of input but got keyword FOR [at 1:21]
SELECT * FROM tvf() FOR SYSTEM_TIME AS OF t1
                    ^
==

SELECT * FROM (SELECT * FROM t) FOR SYSTEM_TIME AS OF t1
--
ERROR: Syntax error: Expected end of input but got keyword FOR [at 1:33]
SELECT * FROM (SELECT * FROM t) FOR SYSTEM_TIME AS OF t1
                                ^
